# webapp-st-boilerplate

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  pyproject.toml
.streamlit/: secrets_template.toml
alembic/: env.py
alembic/versions/: 5f058173b9e2_create_database.py
scripts/: generate_coverage_section.py
src/webapp_st_boilerplate/: app.py  cmd_handler.py  config.py
src/webapp_st_boilerplate/auth/: authentication.py  authorization.py  login.py
src/webapp_st_boilerplate/db/: crud.py  database.py  gateway.py  main.py  models.py  schemas.py
src/webapp_st_boilerplate/front_end/: cmd.py
src/webapp_st_boilerplate/pages/: 0_login.py  1_home.py  2_home_logged.py  3_admin.py  4_user_panel.py
tests/test_webapp_st_boilerplate/: test_cmd_handler.py
tests/test_webapp_st_boilerplate/test_auth/: __init__.py  test_authentication.py  test_authorization.py  test_login.py
tests/test_webapp_st_boilerplate/test_db/: __init__.py  test_gateway.py
